--- a/app/views/test.scala.html
+++ b/app/views/test.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: Html)
 
 <!DOCTYPE html>
 
@@ -10,7 +10,6 @@
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
     </head>
     <body>
-        @content
         @title
     </body>
 </html>
